Correction de fautes d'orthographes !

--- a/index.html
+++ b/index.html
@@ -118,28 +118,24 @@
                 </ul>
                 <div class="tab-content margtop" id="myTabContent">
                   <div class="tab-pane fade show active" id="jeuxvideos" role="tabpanel" aria-labelledby="jeuxvideos-tab">Depuis tout petit
-                    j'ai été baigné dans les jeux vidéos dans un premier temps avec la GameCube puis avec l'ordinateur. Aujourd'hui,
+                    j'ai été baigné dans les jeux vidéos, dans un premier temps avec la GameCube puis avec l'ordinateur. Aujourd'hui,
                     les jeux vidéos sont une source de défis de programmation ainsi qu'un passe temps coopératif.
                   </div>
                   <div class="tab-pane fade" id="prog" role="tabpanel" aria-labelledby="prog-tab">
-                    Bien sûr, je n'aurais rien à faire ici si je n'aimais pas la programmation. J'aime créer et la programmation est un très bon médium d'expression,
-                    surtout que celui-ci est encore jeune, le voir évoluer me passionne. Certains rêves paraissent de moins en moins iréalisables.
+                    Bien sûr, je n'aurai rien à faire ici si je n'aimais pas la programmation. J'aime créer et la programmation est un très bon médium d'expression, surtout que celui-ci est encore jeune, le voir évoluer me passionne. Certains rêves paraissent de moins en moins irréalisable.
                   </div>
                   <div class="tab-pane fade" id="manga" role="tabpanel" aria-labelledby="manga-tab">
-                    Les mangas et les animés me permettent de voyager et d'apprendre de moi, ceux-ci sont à la fois simple et complexe au travers de
-                    l'histoire qu'ils racontent. Ceux-ci sont moins limités par nos limites de la physique et permettent de voir émerger des mondes
-                    plus fantaisistes les uns que les autres.
+                    Les mangas et les animés me permettent de voyager et d'apprendre de moi, ceux-ci sont à la fois simples et complexes au travers de l'histoire qu'ils racontent. Ceux-ci sont moins limités par nos limites de la physique et permettent de voir émerger des mondes plus fantaisistes les uns que les autres.
                   </div>
                   <div class="tab-pane fade" id="dessins" role="tabpanel" aria-labelledby="dessins-tab">
-                    J'ai toujours dessiné, même si c'était pas très esthétique dans un premier temps, je tiens toujours à m'améliorer pour rendre
-                    mes dessins les plus réalistes possible, je me sers parfois de mes dessins pour schématiser mes programmes ou pour les intégrer au site (logos, bannières, fond...).
+                    J'ai toujours dessiné, même si ce n'était pas très esthétique dans un premier temps, je tiens toujours à m'améliorer pour rendre mes dessins les plus réalistes possibles, je me sers parfois de mes dessins pour schématiser mes programmes ou pour les intégrer au site (logos, bannières, fond...).
                   </div>
                   <div class="tab-pane fade" id="sport" role="tabpanel" aria-labelledby="sport-tab">
-                    Le cliché des programmeurs semblent être des personnes non-sportives qui sont sédentaires, j'espère aider à contredire ce cliché. La natation est très importante pour
+                    Le cliché des programmeurs semble être des personnes non-sportives qui sont sédentaires, j'espère aider à contredire ce cliché. La natation est très importante pour
                     moi en plus de me maintenir en forme, la natation me permet de faire le tri et me concentrer sur les choses importantes.
                   </div>
                   <div class="tab-pane fade" id="dog" role="tabpanel" aria-labelledby="dog-tab">
-                    J'éprouve une passion pour les animaux, plus spécialement les chiens, ils ne savent pas à quel point ils nous aident, peu importe ce qu'on fait et comment on est ils nous aiment toujours autant.
+                    J'éprouve une passion pour les animaux, plus spécialement les chiens, ils ne savent pas à quel point ils nous aident, peu importe ce qu'on fait et comment on est, ils nous aiment toujours autant.
                     Les aider est la moindre des choses.
                   </div>
                 </div>
@@ -428,7 +424,7 @@
     </li>
     <li>
       <div data-aos="fade-left">
-        <time>Printenmps 2020</time> Je suis en stage chez <a href="https://www.yogan-developpement.fr/accueil/" alt="lien vers le site de Yogan Développement">Yogan Développement</a> jusqu'en juillet 2020 (durée ~8 semaines)
+        <time>Printenmps 2020</time> Je suis en stage chez <a href="https://www.yogan-developpement.fr/accueil/" target="_blank" alt="lien vers le site de Yogan Développement">Yogan Développement</a> jusqu'en juillet 2020 (durée ~8 semaines)
       </div>
     </li>
     <li>
