I'm back on this project :) Trying to make a portfolio viewer

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <div class="categoryWrapper">
 
           <div class="intro">Bonjour, je suis <span class="intro2"> Pierre Maruejol </span><span class="indeks"></span></div>
-          <div class="intro "> Je suis étudiant en DUT informatique à l'IUT de Montpellier</div>
-          <div class="intro padbot">J'aspire à devenir Software Developer </div>
+          <div class="intro "> Je suis étudiant à l'École de Technologie Supérieure </div>
+          <div class="intro padbot">J'aspire à devenir Software Engineer dans les interfaces haptiques </div>
           <div class="intro "> </div>
           <button id="boop" >
             <span>
@@ -143,10 +143,10 @@
               <div class="position-absolute container">
                 <h4 class="card-title">Vous pouvez me croiser ici :</h4>
 
-                  <button type="button" class="btn btn-dark" data-toggle="popover" data-placement="bottom" title="Numéro de télphone" data-content="+33 7 87 92 56 73"><i class="fas fa-phone-alt"></i></button>
+                  <button type="button" class="btn btn-dark" data-toggle="popover" data-placement="bottom" title="Numéro de télphone" data-content="+1.438.493.1166"><i class="fas fa-phone-alt"></i></button>
                   <button type="button" class="btn btn-dark" data-toggle="popover" data-placement="bottom" title="Adresse mail" data-content="pierre.maruejol@gmail.com"><i class="far fa-envelope"></i></button>
                   <a href="#fcontact"><button type="button" class="btn btn-dark"><i class="fas fa-comment-alt" ></i></button></a>
-                  <a href="https://github.com/PierreMARUEJOL/" target="_blank"><button type="button" class="btn btn-dark"><i class="fab fa-github"></i></button></a>
+                  <a href="https://github.com/CelesteMaru/" target="_blank"><button type="button" class="btn btn-dark"><i class="fab fa-github"></i></button></a>
                   <a href="https://www.linkedin.com/in/pierre-maruejol-845711170/" target="_blank"><button type="button" class="btn btn-dark"><i class="fab fa-linkedin"></i></button></a>
               </div>
             </div>
@@ -164,7 +164,7 @@
             <div class="card cardcolor flex textac">
                 <i class="fas fa-book fa-4x padup"></i>
                 <h4 class="padup"><time>Soif de savoir<time></h4>
-                <p> Apprendre n'est qu'un défis</p>
+                <p> Apprendre n'est qu'un défi</p>
             </div>
           </div>
           <div class="container  col " data-aos="fade-right" >
@@ -434,86 +434,6 @@
     </li>
   </ul>
 </section>
-
-<div class="sticky-bottom footerContact" id="fcontact">
-  <div class="grad3">
-
-    <div class=" flex  card cardcolor">
-      <section class="mb-4">
-
-    <!--Section heading-->
-    <h2 class="h1-responsive font-weight-bold text-center my-4">Contactez-moi</h2>
-    <!--Section description-->
-    <p class="text-center w-responsive mx-auto mb-5">Si vous avez des questions ou si vous voulez me contacter vous pouvez remplir ce formulaire,  il me sera directement envoyé par mail.</p>
-
-            <form id="contact-form" name="contact-form" action="mail.php" method="POST">
-
-                <!--Grid row-->
-                <div class="row">
-
-                    <!--Grid column-->
-                    <div class="col-md-6">
-                        <div class="md-form mb-0">
-                            <input type="text" id="name" name="name" class="form-control">
-                            <label for="name" class="lightgray">Votre nom</label>
-                        </div>
-                    </div>
-                    <!--Grid column-->
-                    <!--Grid column-->
-                    <div class="col-md-6">
-                        <div class="md-form mb-0">
-                            <input type="text" id="email" name="email" class="form-control">
-                            <label for="email" class="lightgray">Votre email</label>
-                        </div>
-                    </div>
-                    <!--Grid column-->
-
-                </div>
-                <!--Grid row-->
-
-                <!--Grid row-->
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="md-form mb-0">
-                            <input type="text" id="subject" name="subject" class="form-control">
-                            <label for="subject" class="lightgray">Sujet</label>
-                        </div>
-                    </div>
-                </div>
-                <!--Grid row-->
-
-                <!--Grid row-->
-                <div class="row">
-
-                    <!--Grid column-->
-                    <div class="col-md-12">
-
-                        <div class="md-form">
-                            <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
-                            <label for="message" class="lightgray">Votre Message</label>
-                        </div>
-
-                    </div>
-                </div>
-                <!--Grid row-->
-
-            </form>
-
-            <div class="text-center text-md-left">
-                <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
-            </div>
-            <div class="status"></div>
-
-
-
-
-</section>
-    </div>
-  </div>
-</div>
-
-
-
 
 
 
