--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,11 @@
   <link rel="stylesheet" href="portfolio/css/portfolio.css">
 </head>
 <body style="background-color: #4e4e4e;">
+  <div class="formcontainer">
+        <input type="text" class="form-control" id="image-search" placeholder="Search" onchange="updateSearch(this.value)">
+    
+
+  </div>
     <div id="carousel-drawings" class="carousel slide">
       <div class="carousel-inner" id="carousel-drawings-inner">
         
@@ -15,11 +20,11 @@
           <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
         </svg>
       </button>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carousel-drawings" data-bs-slide="prev">
+      <button class="carousel-control-prev" type="button" data-bs-target="#carousel-drawings" onclick="prevSlideInCarousel()">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carousel-drawings" data-bs-slide="next">
+      <button class="carousel-control-next" type="button" data-bs-target="#carousel-drawings" onclick="nextSlideInCarousel()">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
