--- a/portfolio.html
+++ b/portfolio.html
@@ -7,31 +7,33 @@
 </head>
 <body style="background-color: #4e4e4e;">
   <div class="formcontainer">
-        <input type="text" class="form-control" id="image-search" placeholder="Search" onchange="updateSearch(this.value)">
-    
+    <input type="text" class="form-control" id="image-search" placeholder="Search" oninput="updateSearch(this.value)">
+  </div>
+
+  <div class="spacer"></div>
+
+  <div id="carousel-drawings" class="carousel slide">
+    <div class="carousel-inner" id="carousel-drawings-inner">    
+    </div>
+    <button class="carousel-control-close" type="button" class="btn btn-danger" onclick="closeCarousel()">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
+        <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
+      </svg>
+    </button>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carousel-drawings" onclick="prevSlideInCarousel()">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carousel-drawings" onclick="nextSlideInCarousel()">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+  <div id="images" class="d-flex row flex-row flex-wrap">
 
   </div>
-    <div id="carousel-drawings" class="carousel slide">
-      <div class="carousel-inner" id="carousel-drawings-inner">
-        
-      </div>
-      <button class="carousel-control-close" type="button" class="btn btn-danger" onclick="closeCarousel()">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
-          <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
-        </svg>
-      </button>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carousel-drawings" onclick="prevSlideInCarousel()">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carousel-drawings" onclick="nextSlideInCarousel()">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-    <div id="images" class="d-flex row flex-row flex-wrap">
 
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="portfolio/js/portfolio.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <script src="portfolio/js/portfolio.js"></script>
 </body>
